加载完才能开始

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       justify-content: center;
     }
     #startButton {
-      display: flex;
+      display: none;
     }
     #replayButton {
       display: none;
