--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
   <div id="timer">剩余时间: 10</div>
 <div id="gameButtons"></div> <!-- 将id修改为gameButtons -->
 
+<!-- 用于显示加载状态和百分比的元素 -->
+  <div id="loadingStatus">素材加载中...</div>
+
   <div id='Buttons'></div>
   <div class="center-container">
     <div style="display: flex; align-items: center; justify-content: center; height: 100%;">
