删除加载中，一开始就能开始

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       justify-content: center;
     }
     #startButton {
-      display: none;
+      display: block;
     }
     #replayButton {
       display: none;
@@ -55,7 +55,6 @@
 <div id="gameButtons"></div> <!-- 将id修改为gameButtons -->
 
 <!-- 用于显示加载状态和百分比的元素 -->
-  <div id="loadingStatus">素材加载中...</div>
 
   <div id='Buttons'></div>
   <div class="center-container">
