--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>影之诗小游戏</title>
+  <title>是鱼友就上100分</title>
   <style>
     /* CSS样式，用于美化游戏界面（可根据需求自行调整） */
     body {
