--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 <body>
   <h1>是鱼友就上100分</h1>
   <p>点击正确关联的鱼丸卡牌，挑战高分吧！</p>
+  <p>游玩过程中，请确保可以听到声音</p>
+  <p>加载有轻微延迟是正常现象</p>
+
   <div id="score">分数: 0</div>
   <div id="timer">剩余时间: 20</div>
 <div id="gameButtons"></div> <!-- 将id修改为gameButtons -->
