--- a/index.html
+++ b/index.html
@@ -1,76 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>是鱼友就上100分</title>
-  <style>
-    /* CSS样式，用于美化游戏界面（可根据需求自行调整） */
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
-    .center-container {
-      /* 如果你想让按钮居中在页面上，可以将这里的高度设为100% */
-      /* height: 100%; */
-    }
-
-    .center-button {
-      /* 可以添加其他样式 */
-      padding: 10px 20px;
-    }
-
-    img {
-      width: 108px;
-      height: 120px;
-      margin: 10px;
-    }
-    #score {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-    #timer {
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
-    #gameButtons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    #startButton {
-      display: block;
-    }
-    #replayButton {
-      display: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>傻狗小站</title>
 </head>
 
 <body>
-  <h1>是鱼友就上100分</h1>
-  <p>点击正确关联的鱼丸卡牌，挑战高分吧！</p>
-  <p>游玩过程中，请确保可以听到声音</p>
-  <p>加载有轻微延迟是正常现象</p>
-
-  <div id="score">分数: 0</div>
-  <div id="timer">剩余时间: 20</div>
-<div id="gameButtons"></div> <!-- 将id修改为gameButtons -->
-
-<!-- 用于显示加载状态和百分比的元素 -->
-
-  <div id='Buttons'></div>
-  <div class="center-container">
-    <div style="display: flex; align-items: center; justify-content: center; height: 100%;">
-    <button class="center-button" id="startButton" onclick="startGame()">开始游戏</button>
-    </div>
-
-    <div style="display: flex; align-items: center; justify-content: center; height: 100%;">
-    <button class="center-button" id="replayButton" onclick="replaySound()">重复播放</button>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
+    <h1>欢迎您的到来！这里是魔塔中级高手，szb的kfc冠军，扎西雀杰的领地</h1>
+    <p>你可能想要访问以下内容：</p>
+    <ul>
+        <li><a href="yuwan.html">鱼友乐园</a></li>
+        <li><a href="https://store.steampowered.com/app/1477330/_/?l=schinese" target="_blank">魂之归宿</a></li>
+    </ul>
 </body>
 
 </html>
