--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
 </head>
 
 <body>
-    <h1>欢迎您的到来！这里是魔塔中级高手，szb的kfc冠军，扎西雀杰的领地</h1>
+    <h1>欢迎您的到来！这里是啥也没有的主页</h1>
     <p>你可能想要访问以下内容：</p>
     <ul>
-        <li><a href="yuwan.html">鱼友乐园</a></li>
-        <li><a href="https://store.steampowered.com/app/1477330/_/?l=schinese" target="_blank">魂之归宿</a></li>
+        <li>
+            <a href="yuwan.html">鱼友乐园</a>
+            <span> - 测试你是否是鱼丸真爱玩家的时候到了</span>
+        </li>
+        <li>
+            <a href="https://space.bilibili.com/66638522" target="_blank">阿b地址</a>
+            <span> - 灌注星导过星导，灌注星导过星导谢谢喵</span>
+        </li>
+        <li>
+            <a href="https://store.steampowered.com/app/1477330/_/?l=schinese" target="_blank">魂之归宿</a>
+            <span> - Zaxiquej的出道骗钱小游戏（误）</span>
+        </li>
+        <li>
+            <a href="https://zaxiquej.wordpress.com/%E5%88%97%E4%B9%8C%E5%B0%BC%E6%96%AF%E7%9A%84%E6%8C%BD%E6%AD%8C/" target="_blank">列乌尼斯的挽歌</a>
+            <span> - 另一个小破站（魔塔向）</span>
+        </li>
     </ul>
 </body>
 
