--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="UTF-8">
@@ -18,14 +18,6 @@
         <li>
             <a href="https://space.bilibili.com/66638522" target="_blank">阿b地址</a>
             <span> - 灌注星导过星导，灌注星导过星导谢谢喵</span>
-        </li>
-        <li>
-            <a href="https://store.steampowered.com/app/1477330/_/?l=schinese" target="_blank">魂之归宿</a>
-            <span> - Zaxiquej的出道骗钱小游戏（误）</span>
-        </li>
-        <li>
-            <a href="https://zaxiquej.wordpress.com/%E5%88%97%E4%B9%8C%E5%B0%BC%E6%96%AF%E7%9A%84%E6%8C%BD%E6%AD%8C/" target="_blank">列乌尼斯的挽歌</a>
-            <span> - 另一个小破站（魔塔向）</span>
         </li>
     </ul>
 </body>
