--- a/yuwan.html
+++ b/yuwan.html
@@ -60,7 +60,7 @@
   <h1>是鱼友就上100分</h1>
   <p>点击正确关联的鱼丸卡牌，挑战高分吧！</p>
   <p>游玩过程中，请确保可以听到声音</p>
-  <p>加载需要一段时间，科学上网可能可以加速，加载完游玩获得最佳体验</p>
+  <p>加载需要一段时间，科学上网可能可以加速</p>
 
   <div id="score">分数: 0</div>
   <div id="timer">剩余时间: 20</div>
