--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <a href="https://space.bilibili.com/66638522" target="_blank">阿b地址</a>
             <span> - 灌注星导过星导，灌注星导过星导谢谢喵</span>
         </li>
+                <li>
+            <a href="https://www.wdmota.com/" target="_blank">王迪魔塔</a>
+            <span> - 想要玩一些不是szb的东西？这里有魔塔</span>
+        </li>
     </ul>
 </body>
 
