--- a/Xcard.html
+++ b/Xcard.html
@@ -27,6 +27,7 @@
             </div>
         </div>
     </div>
+    <script src="XcardInfo.js"></script>
     <script src="Xcard.js"></script>
 </body>
 </html>
