开始按钮还是给出来吧

--- a/mysterian.html
+++ b/mysterian.html
@@ -51,7 +51,7 @@
       height: 20px;
     }
     #startButton {
-      display: none;
+      display: block;
     }
     #replayButton {
       display: none;
