--- a/yuwan.html
+++ b/yuwan.html
@@ -51,7 +51,7 @@
       height: 20px;
     }
     #startButton {
-      display: none;
+      display: block;
     }
     #replayButton {
       display: none;
