哈哈，我链接写错了

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <span> - 测试你是否能入学马纳利亚工程学院的时候到了</span>
         </li>
         <li>
-          <a href="mysterian.html">妖友乐园</a>
+          <a href="arisa.html">妖友乐园</a>
           <span> - 测试你是否能在鸭梨傻的森林里存活的时候到了</span>
       </li>
       <li>
-        <a href="mysterian.html">死友乐园</a>
+        <a href="luna.html">死友乐园</a>
         <span> - 测试你是否会和xcw当朋友的时候到了</span>
     </li>
         <li>
