--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <a href="luna.html">死友乐园</a>
         <span> - 测试你是否会和xcw当朋友的时候到了</span>
     </li>
+    <li>
+      <a href="vania.html">鬼友乐园</a>
+      <span> - 测试你是否当斑比酱的眷属的时候到了</span>
+  </li>
         <li>
             <a href="https://space.bilibili.com/66638522" target="_blank">阿b地址</a>
             <span> - 灌注星导过星导，灌注星导过星导谢谢喵</span>
