--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <a href="vania.html">鬼友乐园</a>
       <span> - 测试你是否当斑比酱的眷属的时候到了</span>
   </li>
+      <li>
+      <a href="eris.html">教友乐园</a>
+      <span> - 测试你是否能入职圣堂的时候到了</span>
+  </li>
         <li>
             <a href="https://space.bilibili.com/66638522" target="_blank">阿b地址</a>
             <span> - 灌注星导过星导，灌注星导过星导谢谢喵</span>
