--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </li>
 
   <li>
-  <a href="eris.html">巴哈姆特的试炼</a>
+  <a href="bahamut.html">巴哈姆特的试炼</a>
   <span> - 测试你能在巴哈姆特又双叒叕之怒下存活多久吧</span>
 </li>
 
