--- a/test.html
+++ b/test.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>影之诗卡牌信息</title>
+  <title>SVG Image Generator</title>
 </head>
 <body>
-    <div id="card-info-container"></div>
-    <script src="test.js"></script>
+  <h1>SVG Image Generator</h1>
+  <label for="numberInput">输入数字：</label>
+  <input type="text" id="numberInput">
+  <button onclick="generateSVG()">生成图片</button>
+  <br>
+  <div id="imageContainer"></div>
+
+  <script src="test.js"></script>
 </body>
 </html>
