--- a/test.html
+++ b/test.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-  <title>SVG Image Generator</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>测试拉取数据</title>
 </head>
 <body>
-  <h1>SVG Image Generator</h1>
-  <label for="numberInput">输入数字：</label>
-  <input type="text" id="numberInput">
-  <button onclick="generateSVG()">生成图片</button>
-  <br>
-  <div id="imageContainer"></div>
+    <h1>Shadowverse Card 数据测试</h1>
+    <button id="fetchButton">获取卡牌数据</button>
+    <div id="result"></div>
 
-  <script src="test.js"></script>
+    <script src="test.js"></script>
 </body>
 </html>
