--- a/Xcard.html
+++ b/Xcard.html
@@ -3,31 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SZB验证游戏</title>
+    <title>影之诗比大小</title>
     <link rel="stylesheet" href="Xcard.css">
 </head>
 <body>
-    <div class="game-container">
-        <h1>影之诗卡牌验证游戏</h1>
-        <p>规则：从牌库中抽取不同的卡牌，系统会问：“这些卡中，没有哪个（费用/攻击力/生命值）？” 点击正确的数字+1分，否则真正正确的选项会变绿，玩家判负。</p>
+    <div id="loading">
+        <p>Loading...</p>
+        <progress max="100" value="0"></progress>
+    </div>
+    <div id="game">
+        <h1>影之诗比大小</h1>
+        <div id="rules">
+            <p>规则：选择比较两张卡片的属性，答对加一分。</p>
+        </div>
+        <div id="score">得分: 0</div>
+        <div id="timer">倒计时: 60</div>
         <button id="start-btn">开始游戏</button>
-        <div id="game-field" class="hidden">
-            <div id="card-container"></div>
-            <div id="question-container">
-                <p id="question-text"></p>
-                <div id="options-container">
-                    <button class="option-btn"></button>
-                    <button class="option-btn"></button>
-                    <button class="option-btn"></button>
-                </div>
-            </div>
-            <div id="score-container" class="hidden">
-                <p>得分：<span id="score">0</span></p>
-                <button id="restart-btn">重新开始</button>
+        <div id="game-content">
+            <img id="left-card" src="" alt="左卡片">
+            <img id="right-card" src="" alt="右卡片">
+            <div id="question">哪张卡有更高的<span id="attribute">攻击</span>？</div>
+            <div id="choices">
+                <button id="left-btn">左</button>
+                <button id="equal-btn">一样</button>
+                <button id="right-btn">右</button>
             </div>
         </div>
+        <div id="game-over">
+            <p>游戏失败！正确答案是<span id="correct-answer"></span></p>
+            <button id="restart-btn">重新开始</button>
+        </div>
     </div>
-    <script src="XcardInfo.js"></script>
+
+    <script src="Xcardinfo.js"></script>
     <script src="Xcard.js"></script>
 </body>
 </html>
