--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </li>
 
         <li>
-            <a href="https://space.bilibili.com/66638522" target="_blank">阿b地址</a>
+            <a href="https://space.bilibili.com/66638522" target="_blank">作者阿b地址</a>
             <span> - 灌注星导过星导，灌注星导过星导谢谢喵</span>
         </li>
                 <li>
@@ -73,6 +73,13 @@
             <a href="https://store.steampowered.com/app/1477330/_/?l=schinese" target="_blank">魂之归宿</a>
             <span> - 如果你试了上面那个局的可以，你可以试试作者制作的魔塔</span>
         </li>
+
+
+        <li>
+            <a href="https://space.bilibili.com/1058046640" target="_blank">典狱长的阿b地址</a>
+            <span> - 没什么，我只是觉得你们都应该认识一下全职业100的典狱长</span>
+        </li>
+        
 
 
     </ul>
