--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
     <button id="fetchButton">获取卡牌数据</button>
     <div id="result"></div>
 
+    <script src="portalcraft.js"></script>
     <script src="test.js"></script>
 </body>
 </html>
