--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <a href="erika.html">皇友乐园</a>
     <span> - 测试你是否是大师级皇家护卫的时候到了</span>
 </li>
-
+<hr> <!-- 这是分割线 -->
   <li>
   <a href="bahamut.html">巴哈姆特的试炼</a>
   <span> - 测试你能在巴哈姆特又双叒叕之怒下存活多久吧</span>
@@ -60,8 +60,10 @@
 <span> - 测试你是否比白银御门更值得使用天使卡组</span>
 </li>
 
+<hr> <!-- 这是分割线 -->
+
         <li>
-            <a href="https://space.bilibili.com/66638522" target="_blank">作者阿b地址</a>
+            <a href="https://space.bilibili.com/66638522" target="_blank">作者的阿b地址</a>
             <span> - 灌注星导过星导，灌注星导过星导谢谢喵</span>
         </li>
                 <li>
@@ -74,6 +76,7 @@
             <span> - 如果你试了上面那个局的可以，你可以试试作者制作的魔塔</span>
         </li>
 
+<hr> <!-- 这是分割线 -->
 
         <li>
             <a href="https://space.bilibili.com/1058046640" target="_blank">典狱长的阿b地址</a>
