--- a/test.html
+++ b/test.html
@@ -7,10 +7,16 @@
 </head>
 <body>
     <h1>Shadowverse Card 数据测试</h1>
-    <button id="fetchButton">获取卡牌数据</button>
+    <button id="fetchButton">获取全部卡牌数据</button>
+    <div>
+        <input type="text" id="searchInput" placeholder="输入中文卡名">
+        <button id="sortButton">根据相似度排序</button>
+    </div>
     <div id="result"></div>
 
-    <script src="portalcraft.js"></script>
+    <script src="library/portalcraft.js"></script>
+    <script src="SimpTrad.js"></script>
+    <script src="similarity.js"></script>
     <script src="test.js"></script>
 </body>
 </html>
