--- a/test.html
+++ b/test.html
@@ -14,7 +14,8 @@
     </div>
     <div id="result"></div>
 
-    <script src="library/portalcraft.js"></script>
+    <script src="library/database.js"></script>
+    <script src="library/lib.js"></script>
     <script src="SimpTrad.js"></script>
     <script src="similarity.js"></script>
     <script src="test.js"></script>
