--- a/guess.html
+++ b/guess.html
@@ -116,7 +116,7 @@
        <details>
            <summary>3. 具体而言，相似度是如何判定的?</summary>
            <p>相似度的判定有三部分：</p>
-           <li>基础分：卡牌的类型、种类、费用、稀有度、（如果是随从）进化前后的攻击与生命。这部分只判断是否相同。</li>
+           <li>基础分：卡牌的类型、种类、费用、稀有度、（如果是随从）进化前后的攻击与生命。其中基础分的一半在于两张卡是否是同类型；如果是随从这部分会允给身材。</li>
            <li>技能分：卡牌具有的特殊能力，会检查双方共享能力在双方总能力之中的占比。</li>
            <li>描述分：卡牌的描述文字，会检查双方描述文字的Levenshtein距离。</li>
            <p>系统会对这三部分各打一个分，随后按照3:3:4的权重生成总分，满分为100。</p>
