--- a/guess.html
+++ b/guess.html
@@ -112,6 +112,7 @@
        <details>
            <summary>2. 如果我找不到某个卡牌怎么办？</summary>
            <p>如果找不到相应的卡牌，请检查输入的名称是否正确。数据库来自于shadowverseportal进行简化，因此可能有部分卡名称和国服采用的有出入。</p>
+           <p>一般来说，近似词提示中可以找到你想要的卡牌；如果找不到，或发现卡名出入太大，请联系作者。</p>
        </details>
        <details>
            <summary>3. 具体而言，相似度是如何判定的?</summary>
