--- a/guess.html
+++ b/guess.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>影之诗猜卡</title>
+    <title>影之诗猜卡（beta)</title>
     <style>
   /* 其他样式保持不变 */
   .highlight {
