--- a/guess.html
+++ b/guess.html
@@ -97,8 +97,8 @@
 <hr> <!-- 这是分割线 -->
     <div id="ruleBox">
        <h2>规则说明</h2>
-       <p>1. 点击“开始解谜”按钮，系统会随机抽取一张卡牌作为解谜目标。</p>
-       <p>2. 在输入框中输入猜测的卡牌名称，并点击“猜测”按钮，系统会告诉你这次猜测的相似度和排名。</p>
+       <p>1. 选择一个种子，然后点击“开始游戏”按钮，系统会随机抽取一张卡牌作为解谜目标。</p>
+       <p>2. 在输入框中输入猜测的卡牌名称，并点击“确认”按钮，系统会告诉你这次猜测的相似度和在所有卡牌中的排名。</p>
        <p>3. 相似度越高，排名越靠前，表示你的猜测与目标卡牌越相似。</p>
        <p>4. 猜错了可以继续猜，直到猜对为止。试试你要几次才能猜到目标卡牌吧！</p>
        <p>5. 由于需要搜索数据库，开始游戏和提示时有卡顿是正常现象。</p>
