--- a/guess.html
+++ b/guess.html
@@ -120,7 +120,7 @@
            <li>基础分：卡牌的类型、种类、费用、稀有度、（如果是随从）进化前后的攻击与生命。其中基础分的一半在于两张卡是否是同类型；如果是随从这部分会允给身材。</li>
            <li>技能分：卡牌具有的特殊能力，会检查双方共享能力在双方总能力之中的占比。</li>
            <li>描述分：卡牌的描述文字，会检查双方描述文字的Levenshtein距离。</li>
-           <p>系统会对这三部分各打一个分，随后按照3:3:4的权重生成总分，满分为100。</p>
+           <p>系统会对这三部分各打一个分，随后按照2:4:4的权重生成总分，满分为100。</p>
        </details>
        <details>
            <summary>4. 卡牌的相似度我所想象的不太一样！</summary>
@@ -128,8 +128,9 @@
            <li>1、系统并不能探知卡牌的token，只会对卡牌本身的能力判断。比如，矮人技师不会被认为和人偶系的卡牌相似度接近，但是会被认为和抉择拿token的卡牌相似度接近。</li>
            <li>2、名字相似甚至复刻角色并不代表卡牌相似度接近。比如邪龙‧林德沃姆相似度最近的是重装巨怪。而风之军神‧格里姆尼尔和飓风军神‧格里姆尼尔很接近，却和另外两个风军不太接近。</li>
            <li>3、占字数多的描述会在描述分里有更多影响。比如游猎的罪人‧安媞马丽亚会与能制造低费自己的伟大的调停者‧佐伊和死骸金属巨星更接近，而不是具有穿墙疾走的邪龙·林德沃姆。</li>
-           <li>4、相似度的判定有三部分（见上），可能你选择的卡在其中一部分有较高的分数，但是就总分的考量偏低。</li>
-           <li>5、待补充</li>
+           <li>4、目前技能处理的算法只考虑效益，在效益基础上考虑cost。简单来说就是如果有葬送抽一会被认为和谢幕曲抽一类似，而不是如果葬送则随机打三</li>
+           <li>5、相似度的判定有三部分（见上），可能你选择的卡在其中一部分有较高的分数，但是就总分的考量偏低。</li>
+           <li>6、待补充</li>
        </details>
        <details>
            <summary>5. 关于瞬念召唤</summary>
