--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
 
 <hr> <!-- 这是分割线 -->
 
+<li>
+<a href="guess.html">影之诗猜卡（beta）</a>
+<span> - 测试你是否对影之诗的卡池足够了解</span>
+</li>
+
+<hr> <!-- 这是分割线 -->
+
         <li>
             <a href="https://space.bilibili.com/66638522" target="_blank">作者的阿b地址</a>
             <span> - 灌注星导过星导，灌注星导过星导谢谢喵</span>
