refractor 可以显示正确答案

--- a/angel.html
+++ b/angel.html
@@ -101,6 +101,7 @@
      <span> 没有专精职业？你可以试试这些 -</span>
        <a href="bahamut.html">挑战巴哈姆特</a>
    </li></div>
+  <script src="listenCommon.js"></script>
   <script src="angelscript1.js"></script>
 </body>
 
