--- a/bahamut.html
+++ b/bahamut.html
@@ -101,6 +101,7 @@
      <span> 没有专精职业？你可以试试这些 -</span>
        <a href="angel.html">挑战白银御门</a>
    </li></div>
+   <script src="listenCommon.js"></script>
   <script src="bahamutscript.js"></script>
 </body>
 
