--- a/guess.html
+++ b/guess.html
@@ -149,6 +149,11 @@
            <li>3、如果你暂时卡关了，可以暂停片刻，之后回来继续！</li>
            <p>当然，如果你想玩更多，你可以随便输入一些东西作为种子！你还可以把你脸滚键盘生成的种子分享给群友（</p>
        </details>
+       <details>
+           <summary>8. 过去的谜题</summary>
+           <li>2023/08/06 Vrut4aWV</li>
+           <li>2023/08/07 e5qHb1IB</li>
+       </details>
    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
