--- a/mysterian.html
+++ b/mysterian.html
@@ -102,6 +102,7 @@
        <a href="angel.html">挑战白银御门</a>
    </li></div>
 
+<script src="listenCommon.js"></script>
   <script src="mysterianscript.js"></script>
 </body>
 
