--- a/orchis.html
+++ b/orchis.html
@@ -104,6 +104,7 @@
              <a href="yuwan.html">我是造物鱼友</a>
          </li></div>
 
+<script src="listenCommon.js"></script>
   <script src="orchisscript.js"></script>
 </body>
 
