--- a/rowen.html
+++ b/rowen.html
@@ -101,6 +101,7 @@
                <a href="angel.html">挑战白银御门</a>
            </li></div>
 
+<script src="listenCommon.js"></script>
   <script src="rowenscript.js"></script>
 </body>
 
