--- a/yuwan.html
+++ b/yuwan.html
@@ -104,6 +104,7 @@
              <a href="orchis.html">我是鱼友，只是不是造物鱼友</a>
          </li></div>
 
+<script src="listenCommon.js"></script>
   <script src="yuwanscript1.js"></script>
 </body>
 
