--- a/arisa.html
+++ b/arisa.html
@@ -101,6 +101,7 @@
        <a href="bahamut.html">挑战巴哈姆特</a>
        <a href="angel.html">挑战白银御门</a>
    </li></div>
+   <script src="listenCommon.js"></script>
   <script src="arisascript.js"></script>
 </body>
 
