--- a/guess.html
+++ b/guess.html
@@ -117,7 +117,7 @@
        <details>
            <summary>3. 具体而言，相似度是如何判定的?</summary>
            <p>相似度的判定有三部分：</p>
-           <li>基础分：卡牌的类型、种类、费用、稀有度、（如果是随从）进化前后的攻击与生命。其中基础分的一半在于两张卡是否是同类型；如果是随从这部分会允给身材。</li>
+           <li>基础分：卡牌的类型、种类、费用、稀有度、（如果是随从）进化前后的攻击与生命。其中基础分的40%在于两张卡是否是同类型；如果是随从这部分会允给身材。</li>
            <li>技能分：卡牌具有的特殊能力，会检查双方共享能力在双方总能力之中的占比。</li>
            <li>描述分：卡牌的描述文字，会检查双方描述文字的Levenshtein距离。</li>
            <p>系统会对这三部分各打一个分，随后按照2:4:4的权重生成总分，满分为100。</p>
@@ -133,8 +133,10 @@
            <li>6、待补充</li>
        </details>
        <details>
-           <summary>5. 关于瞬念召唤</summary>
+           <summary>5. 关于一些技能</summary>
            <p>瞬念召唤在技能上被算为“召唤卡牌”，会和其他召唤卡牌的卡有同一个技能，但是在描述上两者具有差别。</p>
+           <p>爆能强化、激奏和结晶在技能处理是一个系统的。</p>
+           <p>回费和跳费也是一个系统的，不过具体系数有分开就是</p>
        </details>
        <details>
            <summary>6. 关于相似度算法</summary>
