--- a/guess.html
+++ b/guess.html
@@ -130,7 +130,8 @@
            <li>3、占字数多的描述会在描述分里有更多影响。比如游猎的罪人‧安媞马丽亚会与能制造低费自己的伟大的调停者‧佐伊和死骸金属巨星更接近，而不是具有穿墙疾走的邪龙·林德沃姆。</li>
            <li>4、目前技能处理的算法只考虑效益，在效益基础上考虑cost。简单来说就是如果有葬送抽一会被认为和谢幕曲抽一类似，而不是如果葬送则随机打三</li>
            <li>5、相似度的判定有三部分（见上），可能你选择的卡在其中一部分有较高的分数，但是就总分的考量偏低。</li>
-           <li>6、待补充</li>
+           <li>6、同特效正反两个方向会被认为接近。比如跳1费和扣1费在判断里其实差的不远。</li>
+           <li>7、待补充</li>
        </details>
        <details>
            <summary>5. 关于一些技能</summary>
