--- a/guess.html
+++ b/guess.html
@@ -118,8 +118,8 @@
            <summary>3. 具体而言，相似度是如何判定的?</summary>
            <p>相似度的判定有三部分：</p>
            <li>基础分：卡牌的类型、种类、费用、稀有度、（如果是随从）进化前后的攻击与生命。其中基础分的40%在于两张卡是否是同类型；如果是随从这部分会允给身材。</li>
-           <li>技能分：卡牌具有的特殊能力，会检查双方共享能力在双方总能力之中的占比。</li>
-           <li>描述分：卡牌的描述文字，会检查双方描述文字的Levenshtein距离。在此基础上，如果双方描述有公用部分，则有一个最高30%的补正。</li>
+           <li>技能分：卡牌具有的特殊能力，会检查双方共享能力在双方总能力之中的占比，如果有同能力但数据不同会有相应的扣分。得到结果开根为最终分数。</li>
+           <li>描述分：卡牌的描述文字，会检查双方描述文字的Levenshtein距离。在此基础上，如果双方描述有公用部分，则有一个最高50%的补正。</li>
            <p>系统会对这三部分各打一个分，随后按照2:4:4的权重生成总分，满分为100。</p>
        </details>
        <details>
@@ -129,9 +129,10 @@
            <li>2、名字相似甚至复刻角色并不代表卡牌相似度接近。比如邪龙‧林德沃姆相似度最近的是重装巨怪。而风之军神‧格里姆尼尔和飓风军神‧格里姆尼尔很接近，却和另外两个风军不太接近。</li>
            <li>3、占字数多的描述会在描述分里有更多影响。比如游猎的罪人‧安媞马丽亚会与能制造低费自己的伟大的调停者‧佐伊和死骸金属巨星更接近，而不是具有穿墙疾走的邪龙·林德沃姆。</li>
            <li>4、目前技能处理的算法只考虑效益，在效益基础上考虑cost。简单来说就是如果有葬送抽一会被认为和谢幕曲抽一类似，而不是如果葬送则随机打三</li>
-           <li>5、相似度的判定有三部分（见上），可能你选择的卡在其中一部分有较高的分数，但是就总分的考量偏低。</li>
+           <li>5、相似度的判定有三部分（见上），可能你选择的卡在其中一部分有较高的分数，但是就总分的考量偏低。比如观星魔女·斯特拉感觉上应该和占星术非常接近，但实际上虽然两者描述分很高，基础分和技能分（观星魔女没有减费能力）会拉掉很多分。</li>
            <li>6、同特效正反两个方向会被认为接近。比如跳1费和扣1费在判断里其实差的不远。</li>
-           <li>7、待补充</li>
+           <li>7、系统一般只考虑最外层能力，例，蛇殿和猫猫头会被认为不相似，因为蛇殿是“给主战者贴能力”，而猫猫头是扣对面上限。</li>
+           <li>9、待补充</li>
        </details>
        <details>
            <summary>5. 关于一些技能</summary>
