--- a/guess.html
+++ b/guess.html
@@ -106,7 +106,7 @@
        <h2>常见问题解答</h2>
        <details>
            <summary>1. 系统会选择哪些卡牌作为解谜目标？</summary>
-           <p>系统会从已有的卡牌数据库中随机选择一张卡牌作为解谜目标。</p>
+           <p>系统会从已有的卡牌数据库中随机选择一张卡牌作为解谜目标（包含token，不包含异画）。</p>
            <p>目前数据库截止至：密斯塔尔希亚的英雄，DLC前</p>
        </details>
        <details>
@@ -151,7 +151,7 @@
            <li>1、其他猜词游戏也是这么做的（</li>
            <li>2、可以让你和狱友讨论今日卡牌，当然要小心被剧透</li>
            <li>3、如果你暂时卡关了，可以暂停片刻，之后回来继续！</li>
-           <p>当然，如果你想玩更多，你可以随便输入一些东西作为种子！你还可以把你脸滚键盘生成的种子分享给群友（</p>
+           <p>当然，如果你想玩更多，你可以随便输入一些东西作为种子（种子可以是任何语言，包括中文）！你还可以把你脸滚键盘生成的种子分享给群友（</p>
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
