--- a/guess.html
+++ b/guess.html
@@ -137,6 +137,7 @@
            <summary>5. 关于一些技能</summary>
            <p>瞬念召唤在技能上被算为“召唤卡牌”，会和其他召唤卡牌的卡有同一个技能，但是在描述上两者具有差别。</p>
            <p>爆能强化、激奏和结晶在技能处理是一个系统的。</p>
+           <p>但是激奏和结晶实际上又算是变身……。</p>
            <p>回费和跳费也是一个系统的，不过具体系数有分开就是</p>
        </details>
        <details>
