激奏结晶试运行

--- a/guess.html
+++ b/guess.html
@@ -125,7 +125,7 @@
        <details>
            <summary>4. 卡牌的相似度我所想象的不太一样！</summary>
            <p>嗯，这是可能发生的，这有几种可能性：</p>
-           <li>1、系统并不能探知卡牌的token，只会对卡牌本身的能力判断。比如，矮人技师不会被认为和人偶系的卡牌相似度接近，但是会被认为和抉择拿token的卡牌相似度接近。</li>
+           <li>1、系统并不能探知卡牌的token，只会对卡牌本身的能力判断（激奏、结晶、抉择变形除外，见下）。比如，矮人技师不会被认为和人偶系的卡牌相似度接近，但是会被认为和抉择拿token的卡牌相似度接近。</li>
            <li>2、名字相似甚至复刻角色并不代表卡牌相似度接近。比如邪龙‧林德沃姆相似度最近的是重装巨怪。而风之军神‧格里姆尼尔和飓风军神‧格里姆尼尔很接近，却和另外两个风军不太接近。</li>
            <li>3、占字数多的描述会在描述分里有更多影响。比如游猎的罪人‧安媞马丽亚会与能制造低费自己的伟大的调停者‧佐伊和死骸金属巨星更接近，而不是具有穿墙疾走的邪龙·林德沃姆。</li>
            <li>4、相似度的判定有三部分（见上），可能你选择的卡在其中一部分有较高的分数，但是就总分的考量偏低。比如观星魔女·斯特拉感觉上应该和占星术非常接近，但实际上虽然两者描述分很高，基础分和技能分（观星魔女没有减费能力）会拉掉很多分。</li>
@@ -134,18 +134,20 @@
            <li>7、待补充</li>
        </details>
        <details>
-           <summary>5. 关于一些技能</summary>
+           <summary>5. 关于激奏、结晶、命运抉择变形</summary>
+           <p>这些变形卡牌在对比中，基本分和技能分均会检查原卡和所有变形成的卡，取其中最高值，但是描述分根据原卡。</p>
+       </details>
+       <details>
+           <summary>6. 关于一些技能</summary>
            <p>瞬念召唤在技能上被算为“召唤卡牌”，会和其他召唤卡牌的卡有同一个技能，但是在描述上两者具有差别。</p>
-           <p>爆能强化、激奏和结晶在技能处理是一个系统的。</p>
-           <p>但是激奏和结晶实际上又算是变身……。</p>
            <p>回费和跳费也是一个系统的，不过具体系数有分开就是</p>
        </details>
        <details>
-           <summary>6. 关于相似度算法</summary>
+           <summary>7. 关于相似度算法</summary>
            <p>相似度算法还在优化中，但是你可以先体验一下游戏（指被拉血压）。</p>
        </details>
        <details>
-           <summary>7. 每天生成的种子是固定的吗？</summary>
+           <summary>8. 每天生成的种子是固定的吗？</summary>
            <p>是的。如果你想要玩别的，你可以输入之前的种子。</p>
            <p>这么做的理由：</p>
            <li>1、其他猜词游戏也是这么做的（</li>
@@ -154,7 +156,7 @@
            <p>当然，如果你想玩更多，你可以随便输入一些东西作为种子（种子可以是任何语言，包括中文）！你还可以把你脸滚键盘生成的种子分享给群友（</p>
        </details>
        <details>
-           <summary>8. 过去的谜题</summary>
+           <summary>9. 过去的谜题</summary>
            <li>2023/08/06 Vrut4aWV</li>
            <li>2023/08/07 e5qHb1IB</li>
        </details>
@@ -162,6 +164,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
     <script src="library/database.js"></script>
+    <script src="library/subDatabase.js"></script>
     <script src="SimpTrad.js"></script>
     <script src="similarity.js"></script>
     <script src="guess.js"></script>
