--- a/test.html
+++ b/test.html
@@ -15,6 +15,7 @@
     <div id="result"></div>
 
     <script src="library/database.js"></script>
+    <script src="library/subDatabase.js"></script>
     <script src="library/lib.js"></script>
     <script src="SimpTrad.js"></script>
     <script src="similarity.js"></script>
