激奏结晶抉择改 修复0cbug

--- a/guess.html
+++ b/guess.html
@@ -135,7 +135,9 @@
        </details>
        <details>
            <summary>5. 关于激奏、结晶、命运抉择变形</summary>
-           <p>这些变形卡牌在对比中，基本分和技能分均会检查原卡和所有变形成的卡，取其中最高值，但是描述分根据原卡。</p>
+           <p>这些变形卡牌在对比中，基本分和技能分均会检查原卡和所有变形成的卡，尝试最高的一组配对方式，然后将其总分平均。</p>
+           <p>如果数量不符对不上，对不上的部分会减权，且计为0分。本体对上会有额外加权。</p>
+           <p>例：狂舞之刃·蒂欧涅对暴狂士兵时，会激奏2对激奏2，本体对本体；蒂欧涅的激奏7对不上。最终基本分+技能分为激奏2对比分+减权的激奏7得分+加权的本体得分
        </details>
        <details>
            <summary>6. 关于一些技能</summary>
