--- a/guess.html
+++ b/guess.html
@@ -120,7 +120,7 @@
            <li>基础分：卡牌的类型、种类、费用、稀有度、（如果是随从）进化前后的攻击与生命。其中基础分的40%在于两张卡是否是同类型；如果是随从这部分会允给身材。</li>
            <li>技能分：卡牌具有的特殊能力，会检查双方共享能力在双方总能力之中的占比，如果有同能力但数据不同会有相应的扣分。得到结果开根为最终分数。</li>
            <li>描述分：卡牌的描述文字，会检查双方描述文字的Levenshtein距离。在此基础上，如果双方描述有公用部分，则有一个最高30%的补正。</li>
-           <p>系统会对这三部分各打一个分，随后按照20:35:45的权重生成总分，满分为100。</p>
+           <p>系统会对这三部分各打一个分，随后按照2:5:3的权重生成总分，满分为100。</p>
        </details>
        <details>
            <summary>4. 卡牌的相似度我所想象的不太一样！</summary>
@@ -159,8 +159,9 @@
        </details>
        <details>
            <summary>9. 过去的谜题</summary>
-           <li>2023/08/06 Vrut4aWV</li>
-           <li>2023/08/07 e5qHb1IB</li>
+           <li>2023/08/08-0ElHftw2</li>
+           <li>2023/08/07-e5qHb1IB</li>
+           <li>2023/08/06-Vrut4aWV</li>
        </details>
    </div>
 
