--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
         <button id="sortButton">根据相似度排序</button>
     </div>
     <div id="result"></div>
-
+    <script src="library/timingData.js"></script>
     <script src="library/database.js"></script>
     <script src="library/subDatabase.js"></script>
     <script src="library/lib.js"></script>
