--- a/guess.html
+++ b/guess.html
@@ -126,10 +126,10 @@
            <summary>4. 卡牌的相似度我所想象的不太一样！</summary>
            <p>嗯，这是可能发生的，这有几种可能性：</p>
            <li>1、对不上的能力是会有扣分的，比如耶拉护符和耶伦毕菈会因为耶伦毕菈有守护和回血，没有最高的相似度。</li>
-           <li>2、系统并不能探知卡牌的token，只会对卡牌本身的能力判断（激奏、结晶、抉择变形除外，见下）。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;比如，矮人技师不会被认为和人偶系的卡牌相似度接近，但是会被认为和抉择拿token的卡牌相似度接近。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;同理，尽管随从耶拉会召唤护符耶拉，两者不被认为相似（因为系统不会去检查token）。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;特殊地，如果两者拿了相同token（人偶系）则会有一定程度的加分；而套娃类会和普通制造token有区分。</li>
+           <li>2、系统并不能探知卡牌的token，只会对卡牌本身的能力判断（激奏、结晶、抉择变形除外，见下）。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;比如，矮人技师不会被认为和人偶系的卡牌相似度接近，但是会被认为和抉择拿token的卡牌相似度接近。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;同理，尽管随从耶拉会召唤护符耶拉，两者不被认为相似（因为系统不会去检查token）。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;特殊地，如果两者拿了相同token（如人偶系）则会有一定程度的加分；而套娃类会和普通制造token有区分。</li>
            <li>3、名字相似甚至复刻角色并不代表卡牌相似度接近。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;比如，邪龙‧林德沃姆相似度最近的是重装巨怪。而风之军神‧格里姆尼尔和飓风军神‧格里姆尼尔很接近，却和另外两个风军不太接近。</li>
            <li>4、占字数多的描述会在描述分里有更多影响。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;比如，游猎的罪人‧安媞马丽亚会与能制造低费自己的伟大的调停者‧佐伊和死骸金属巨星更接近，而不是具有穿墙疾走的邪龙·林德沃姆。</li>
-           <li>5、相似度的判定有三部分（见上），可能你选择的卡在其中一部分有较高的分数，但是就总分的考量偏低。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;比如，观星魔女·斯特拉感觉上应该和占星术非常接近，但实际上虽然两者描述分很高，基础分和技能分（观星魔女没有减费能力）会拉掉很多分。</li>
+           <li>5、相似度的判定有三部分（见上），可能你选择的卡在其中一部分有较高的分数，但是就总分的考量偏低。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;比如，观星魔女·斯特拉感觉上应该和占星术非常接近，但实际上虽然两者描述分很高，基础分和技能分（观星魔女没有减费能力和土秘）会拉掉很多分。</li>
            <li>6、同特效正反两个方向会被认为接近。比如跳1费和扣1费在判断里其实差的不远。</li>
            <li>7、待补充</li>
        </details>
