--- a/guess.html
+++ b/guess.html
@@ -163,6 +163,28 @@
            <li>2023/08/07-e5qHb1IB</li>
            <li>2023/08/06-Vrut4aWV</li>
        </details>
+       <details>
+         <summary>10. 更新记录</summary>
+         <ul style="list-style-type: none; padding: 0;">
+           <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/08/08</span>增加了技能稀有度补正；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了贴主战者/随从效果时，具体效果的判断；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了套娃、回收/复制系的判定；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了触发时点的判定；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许优化数据库文字。
+           </li>
+           <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/08/07</span>增加了技能目标的判定；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了葬送、土秘、死灵术等cost的判定；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了激奏和结晶的额外判定；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了增加了自残与亡者召还的判定；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>调整了部分权重，增加了同token奖分。
+           </li>
+           <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/08/06</span>beta上线
+           </li>
+         </ul>
+       </details>
    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
