--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
     <script src="library/timingData.js"></script>
     <script src="library/database.js"></script>
     <script src="library/subDatabase.js"></script>
+    <script src="library/ratioTable.js"></script>
     <script src="library/lib.js"></script>
     <script src="SimpTrad.js"></script>
     <script src="similarity.js"></script>
