--- a/guess.html
+++ b/guess.html
@@ -165,7 +165,8 @@
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/08</span>优化了技能稀有度补正；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了连击、觉醒等词条的判定；<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>对部分词条进行了额外区分；现在回费和跳费、瞬念和拉人之类的会分开了。<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>对部分词条进行了额外区分；现在回费和跳费、瞬念和拉人、破坏和自杀之类的会分开了。<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了“敌我不分”词条。
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>少许优化数据库文字。
            </li>
            <li style="margin-left: 20px;">
