--- a/guess.html
+++ b/guess.html
@@ -130,8 +130,9 @@
            <li>3、名字相似甚至复刻角色并不代表卡牌相似度接近。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;比如，邪龙‧林德沃姆相似度最近的是重装巨怪。而风之军神‧格里姆尼尔和飓风军神‧格里姆尼尔很接近，却和另外两个风军不太接近。</li>
            <li>4、占字数多的描述会在描述分里有更多影响。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;比如，游猎的罪人‧安媞马丽亚会与能制造低费自己的伟大的调停者‧佐伊和死骸金属巨星更接近，而不是具有穿墙疾走的邪龙·林德沃姆。</li>
            <li>5、相似度的判定有三部分（见上），可能你选择的卡在其中一部分有较高的分数，但是就总分的考量偏低。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;比如，观星魔女·斯特拉感觉上应该和占星术非常接近，但实际上虽然两者描述分很高，基础分和技能分（观星魔女没有减费能力和土秘）会拉掉很多分。</li>
-           <li>6、同特效正反两个方向会被认为接近。比如跳1费和扣1费在判断里其实差的不远。</li>
-           <li>7、待补充</li>
+           <li>6、同特效正反两个方向会被认为接近。比如跳1费和扣1费在判断里其实差的不远。（如果大家对此意见很大可以改）</li>
+           <li>7、目前已经做了扳机和任务的判定，但是计数器判定还没做；所以可能会因此无法将一张计数器卡与同类任务卡联系起来（如奥伯龙与深根异种）</li>
+           <li>8、待补充</li>
        </details>
        <details>
            <summary>5. 关于激奏、结晶、命运抉择变形</summary>
