--- a/guess.html
+++ b/guess.html
@@ -166,7 +166,7 @@
          <ul style="list-style-type: none; padding: 0;">
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/10</span>少许放宽了正确技能错误条件的扣分；<br>
-             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了部分任务词条的判定；<br>
+             <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了部分任务词条与扳机的判定；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了手牌变形、增减脸血上限、脸膜等的判定；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>给部分能力过于独特的卡提供了一些手动补正；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>基础分降低进化后身材的权重，且根据进化时增加的属性值，增加一个"异形身材"词条；<br>
