--- a/guess.html
+++ b/guess.html
@@ -155,6 +155,7 @@
        </details>
        <details>
            <summary>8. 过去的谜题</summary>
+           <li>2023/08/12-lagb0tvw</li>
            <li>2023/08/11-vxfre60c</li>
            <li>2023/08/10-gomsuRRv</li>
            <li>2023/08/09-WFXRB5fj</li>
@@ -165,6 +166,9 @@
        <details>
          <summary>9. 更新记录</summary>
          <ul style="list-style-type: none; padding: 0;">
+           <li style="margin-left: 20px;">
+             <span style="display: inline-block; width: 140px;">2023/08/12</span>少许优化了buff类目标的扣分机制；<br>
+           </li>
            <li style="margin-left: 20px;">
              <span style="display: inline-block; width: 140px;">2023/08/10</span>少许放宽了正确技能错误条件的扣分；<br>
              <span style="display: inline-block; width: 140px; margin-left: 0;"></span>增加了部分任务词条与扳机的判定；<br>
